k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: bbl-poc-deploy
  name: bbl-poc-deploy
  namespace: bbl-poc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bbl-poc-deploy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bbl-poc-deploy
    spec:
      containers:
      - image: bbl.poc.log-analytic:latest
        imagePullPolicy: Never
        name: bbl-poc-log-analytic-f9pgx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: log-volume
            mountPath: /var/log/bbl-poc/
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: log-volume
        persistentVolumeClaim:
          claimName: bbl-poc-pvc
status: {}
