k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-05-09T05:53:48Z"
  labels:
    app: bbl-poc-deploy
  name: bbl-poc-deploy
  namespace: bbl-poc
  resourceVersion: "2253"
  uid: 9f0c53ef-a367-425f-a398-2c9e8a717922
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-8080
    port: 8080
    targetPort: 8080
  selector:
    app: bbl-poc-deploy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
