k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbl-poc-ing
  namespace: bbl-poc
spec:
  ingressClassName: nginx
  rules:
  - host: bbl-poc.bbl
    http:
      paths:
      - backend:
          service:
            name: bbl-poc-deploy
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
